src/objects/Contestant__c.object
<CustomObject>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Contestants</relationshipLabel>
        <relationshipName>Contestants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChampionshipPoints__c</fullName>
        <label>Championship Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DriverRace__c</fullName>
        <formula>Driver__r.Name + &apos; (&apos; + Race__r.Name + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Driver and Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Driver</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active Drivers can be contestants in a race.</errorMessage>
            <filterItems>
                <field>Driver__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Drivers who&apos;s status is active are permitted.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Driver__c</referenceTo>
        <relationshipLabel>Contestants</relationshipLabel>
        <relationshipName>Contestants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GridPosition__c</fullName>
        <label>Grid Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification1LapTime__c</fullName>
        <label>Qualification 1 Lap Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification2LapTime__c</fullName>
        <label>Qualification 2 Lap Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification3LapTime__c</fullName>
        <label>Qualification 3 Lap Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RaceDataID__c</fullName>
        <externalId>true</externalId>
        <label>Race Data ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RacePosition__c</fullName>
        <label>Race Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RaceTime__c</fullName>
        <label>Race Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <referenceTo>Race__c</referenceTo>
        <relationshipLabel>Contestants</relationshipLabel>
        <relationshipName>Contestants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RetirementReason__c</fullName>
        <label>Retirement Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Contestant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CONTESTANT-{00000000}</displayFormat>
        <label>Contestant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contestants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>